Maple file for Q2

--- a/LaTeX/New.tex
+++ b/LaTeX/New.tex
@@ -1,7 +1,14 @@
+\documentclass{report}
+\usepackage[utf8]{inputenc}
+\usepackage{xepersian}
 
-\begin{figure}[t]
-\centering
-\includegraphics{}
-\caption{}
-\label{fig:li}
-\end{figure}
+
+\setlength{\parindent}{5em}
+\setlength{\parskip}{2em}
+\renewcommand{\baselinestretch}{3.0}
+
+\begin{document}
+\begin{RTL}
+ÈííÈíÈ
+\end{RTL
+\end{document}
