Latex figures added

--- a/LaTeX/New.tex
+++ b/LaTeX/New.tex
@@ -1,7 +1,10 @@
 \documentclass[12pt, letterpaper]{article}
 
 \usepackage{amsmath}
+\usepackage{graphicx}
 
+% set path to images
+\graphicspath{{./images/}}
 
 % load persian language and select font
 \usepackage{xepersian}
@@ -46,7 +49,23 @@
 
 \subsection{پاسخ}
 همانطور که در فایل میپل حل این سوال قابل مشاهده است، در مرحله اول با تعریف ظابطه اصلی تابع و رسم نمودار آن سعی میکنیم درکی هندسی از رفتار آن بیابیم. نمودار اول نشان میدهد که تابع در 0 به مقداری نزدیک به 0 میل میکند. اما با برسی دقیق تر و محدود کردن دامنه نمایش نمودار مشاهده میشود که تابع در مقادیر نزدیک به صفر شدیدا نوسان میکند. \\
-برای حل سوال در اپتدا بسط مکلورن توابع را تا درجه 10 محاسبه میکنیم.
+% insert the 2 plot of f(x) 
+
+\includegraphics[height=5cm, width=7cm]{figure1.png}
+\includegraphics[height=5cm, width=7cm]{figure2.png}
+\\
+
+
+برای حل سوال در ابتدا بسط مکلورن توابع را تا درجه 10 محاسبه میکنیم. نرم افزار میپل از
+\(O(x^y)\)
+ برای نمایش درجه خطا در یک سری تیلور استفاده میکند. یا این توصیف با افزایش تعداد جملات سری تیلور یا درجه آن میتوان خطا را تا حد توانایی مجاسباتی کامپیوتر کاهش داد. اما چون در این مورد 
+\(x\)
+ بسیار نزدیک به 0 است میتوان با همین درجه پیش رفت چرا که وقتی 
+\(x\) 
+ نزدیک به صفر است 
+\(x^{11}\)
+ بسیار کوچک خواهد بود.
+\\
 
 \end{document}
 
