end of question 2

--- a/LaTeX/New.tex
+++ b/LaTeX/New.tex
@@ -66,6 +66,29 @@
 \(x^{11}\)
  بسیار کوچک خواهد بود.
 \\
+\(Order=20\)
+برای این است که میپل سری هارا تا درجه حداکثر 20 محاسبه کند و خطا کمی بیشتر کاهش پیدا کند. همانطور که گفته شد جملات
+\(O(21)\)
+و 
+\(O(20)\)
+را از سری ها حذف میکنیم. تابع 
+\(f_2(x)\)
+ را با چندجمله ای ها تعریف میکنیم. تابعی به صورت زیر تعریف میکنیم:
+\[Lim(n) = \lim_{x\to 0}\frac {f_2(x)}{x^n}\]
+
+\vspace{5 mm}
+مقادیر 
+\(Lim\)
+ را برای 
+\(n\)
+ از 1 تا 10 محاسبه میکنیم و همانطور که مشاهده میشود بخشی از حدود تعریف نشده است.
+تابع \(Lim\) را این بار با اعمال قاعده هوپیتال تعریف میکنیم و دوباره مقادیر \(Lim\) را برای \(n\) از 1 تا 10 محاسبه میکنیم. میبینیم که
+\[ \lim_{x\to 0}\frac {f_2(x)}{x^2} = \frac{1}{3}\]
+پس 
+\[ L = \frac{1}{3}, \: p = 2\]
+
+
+
 
 \end{document}
 
