--- a/LaTeX/New_backup.tex
+++ b/LaTeX/New_backup.tex
@@ -7,6 +7,7 @@
 \usepackage{graphicx}
 \usepackage{multirow}
 \usepackage{amssymb}
+\usepackage{hyperref}
 
 % set path to images
 \graphicspath{{./images/}}
@@ -219,6 +220,9 @@ $ D-ARR5.mat , C-ARR.mat $
 شامل داده های بسیار بزرگ تری نسبت به موارد ذکر شده در گزارش هستند اما همچنان ادعای مطرح شده را  تصدیق میکنند.
 \vspace{10mm}
 \\
+منابع
+\rule{\textwidth}{0.5pt} 
+\href{https://github.com/ehsan1381/Numerical-Analysis-Project-1}{$GitHub$}
 
 \end{document}
 
